--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.1.1"
   },
   "scripts": {
@@ -68,7 +68,6 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^12.1.3",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
